<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailTeamActivity">

    <ImageView
        android:id="@+id/imageViewTeam"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/team_logo" />

    <TextView
        android:id="@+id/textViewTeamName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Team Name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageViewTeam"
        app:layout_constraintStart_toStartOf="@+id/imageViewTeam"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTeam" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeamName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alternate_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formed_year" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stadium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stadium_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stadium_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textViewAlternateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Alternate Name" />

        <TextView
            android:id="@+id/textViewFormedYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1998" />

        <TextView
            android:id="@+id/textViewStadium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Stadium" />

        <TextView
            android:id="@+id/textViewStadiumDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            tools:text="Stadium Description" />

        <TextView
            android:id="@+id/textViewStadiumLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Stadium Location" />

        <TextView
            android:id="@+id/textViewTeamDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            tools:text="Team Description" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>