<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tool:context=".view.MatchDetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/logo_home"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tool:src="@tools:sample/avatars"
            android:contentDescription="@string/home_team_logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/logo_away"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tool:src="@tools:sample/avatars"
            android:contentDescription="@string/away_team_logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/text_home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_large"
            tool:text="@tools:sample/first_names"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/text_home_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_large"
            tool:text="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_small"
            android:layout_marginLeft="@dimen/space_small"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_large"
            android:text="@string/colon"/>

        <TextView
            android:id="@+id/text_away_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_large"
            tool:text="2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/text_away_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            tool:text="@tools:sample/first_names"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_home_goal_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_large"
                tool:text="@tools:sample/first_names"
                android:ellipsize="end"
                android:maxLines="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_small"
                android:layout_marginRight="@dimen/space_small"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_large"
                android:text="@string/goal_details"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_away_goal_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                tool:text="@tools:sample/first_names"
                android:ellipsize="end"
                android:maxLines="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </HorizontalScrollView>

   <HorizontalScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <View
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>

           <TextView
               android:id="@+id/text_home_red_card"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:textColor="@color/colorBlack"
               android:textSize="@dimen/text_large"
               tool:text="@tools:sample/first_names"
               android:ellipsize="end"
               android:maxLines="1"/>

           <View
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="@dimen/space_small"
               android:layout_marginLeft="@dimen/space_small"
               android:textStyle="bold"
               android:textColor="@color/colorBlack"
               android:textSize="@dimen/text_large"
               android:text="@string/red_cards"/>

           <View
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>

           <TextView
               android:id="@+id/text_away_red_card"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/text_large"
               android:textStyle="bold"
               android:textColor="@color/colorBlack"
               tool:text="@tools:sample/first_names"
               android:ellipsize="end"
               android:maxLines="1"/>

           <View
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>

       </LinearLayout>

   </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_home_yellow_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_large"
                tool:text="@tools:sample/first_names"
                android:ellipsize="end"
                android:maxLines="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_small"
                android:layout_marginRight="@dimen/space_small"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_large"
                android:text="@string/yellow_cards"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_away_yellow_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                tool:text="@tools:sample/first_names"
                android:ellipsize="end"
                android:maxLines="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_home_line_up_goal_keeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_large"
                tool:text="@tools:sample/first_names"
                android:ellipsize="end"
                android:maxLines="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_small"
                android:layout_marginLeft="@dimen/space_small"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_large"
                android:text="@string/line_up_goal_keeper"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_away_line_up_goal_keeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                tool:text="@tools:sample/first_names"
                android:ellipsize="end"
                android:maxLines="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>